views (shared, partial) - viewModel

--- a/class01/Views/Home/Privacy.cshtml
+++ b/class01/Views/Home/Privacy.cshtml
@@ -6,6 +6,11 @@
 <h2>My name: "@ViewBag.Name"</h2>
 <h3>@ViewBag.Teste</h3>
 
+<hr />
+<!-- chamado de Partial View -->
+<partial name="_messagesPartial"/>
+<hr />
+
 <p>Use this page to detail your site's privacy policy.</p>
 
 <form action="privacy" method="post">
