--- a/class01/Views/Shared/_Layout.cshtml
+++ b/class01/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Test">Test</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Client" asp-action="Index">Client</a>
+                        </li>
                     </ul>
                 </div>
             </div>
