AutoMapper and Helpers

--- a/class01/Views/Client/Index.cshtml
+++ b/class01/Views/Client/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Clients Lists";
+    int cont = 0;
 }
 
 
@@ -13,6 +14,9 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                Index
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -27,7 +31,9 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
+    cont++;
         <tr>
+            <td>@cont</td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name) 
             </td>
