--- a/class01/Views/Client/Create.cshtml
+++ b/class01/Views/Client/Create.cshtml
@@ -16,17 +16,17 @@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                @* <span asp-validation-for="Name" class="text-danger"></span> *@
             </div>
             <div class="form-group">
                 <label asp-for="Cellphone" class="control-label"></label>
                 <input asp-for="Cellphone" class="form-control" />
-                <span asp-validation-for="Cellphone" class="text-danger"></span>
+                @* <span asp-validation-for="Cellphone" class="text-danger"></span> *@
             </div>
             <div class="form-group">
                 <label asp-for="Adress" class="control-label"></label>
                 <input asp-for="Adress" class="form-control" />
-                <span asp-validation-for="Adress" class="text-danger"></span>
+                @* <span asp-validation-for="Adress" class="text-danger"></span> *@
             </div>
             <div style="padding-top:10px;" class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
