--- a/class01/Views/_ViewImports.cshtml
+++ b/class01/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using class01
 @using class01.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, class01.Helpers.TagHelpers
